Opened 8 years ago
Closed 7 years ago
#13558 closed bug (fixed)
Kernel Panic in load_tracking.h
Reported by: | phoudoin | Owned by: | nobody |
---|---|---|---|
Priority: | critical | Milestone: | Unscheduled |
Component: | System/Kernel | Version: | R1/Development |
Keywords: | panic | Cc: | |
Blocked By: | Blocking: | ||
Platform: | x86-64 |
Description
Haiku x86_64 hrev51173 running under VirtualBox since more than 3 weeks, idling (blank screensaver) since at least 12h, entered in kernel panic at wake up in Scheduler::ThreadData::_ComputeNeededLoad()
See KDL screenshot attached.
After two "cont" KDL commands, system seems fine again.
Attachments (2)
Change History (5)
by , 8 years ago
Attachment: | VirtualBox_Haiku_14_06_2017_10_56_11.png added |
---|
comment:3 by , 8 years ago
Got this again, aallowing me to run int_load
KDL command (attached below)
by , 8 years ago
Attachment: | VirtualBox_Haiku_14_06_2017_12_31_16.png added |
---|
KDL int_load command output
Note:
See TracTickets
for help on using tickets.
KDL stack crawl